--- a/pillar.example
+++ b/pillar.example
@@ -10,39 +10,39 @@ strongswan:
     strictcrlpolicy: 'yes'
     uniqueids: 'no'
 
-  conn:
-    # option %default conn
-    _default:
-      keyingtries: 1
-
-    # other conn
-    conn_a:
-      left: 10.10.1.1
-      leftsubnet: 10.10.1.0/32
-      right: 10.20.1.1
-      rightsubnet: 10.20.1.0/32
-      ike: 3des-sha1-modp1024
-      esp: 3des-sha1
-      authby: secret
-      auto: add
-
-    conn_b:
-      left: 10.10.2.1
-      leftsubnet: 10.10.2.0/32
-      right: 10.20.2.1
-      rightsubnet: 10.20.1.0/32
-      ike: 3des-sha1-modp1024
-      esp: 3des-sha1
-      authby: secret
-      auto: add
-
-  # define secrets
-  secrets:
-    conn_a:
-      - '10.10.1.1 : PSK "v+NkxY9LLZvwj4qCC2o/gGrWDF2d21jL"'
-
-    conn_b:
-      - 'alice@strongswan.org : EAP "x3.dEhgN"'
+#  conn:
+#    # option %default conn
+#    _default:
+#      keyingtries: 1
+#
+#    # other conn
+#    conn_a:
+#      left: 10.10.1.1
+#      leftsubnet: 10.10.1.0/32
+#      right: 10.20.1.1
+#      rightsubnet: 10.20.1.0/32
+#      ike: 3des-sha1-modp1024
+#      esp: 3des-sha1
+#      authby: secret
+#      auto: add
+#
+#    conn_b:
+#      left: 10.10.2.1
+#      leftsubnet: 10.10.2.0/32
+#      right: 10.20.2.1
+#      rightsubnet: 10.20.1.0/32
+#      ike: 3des-sha1-modp1024
+#      esp: 3des-sha1
+#      authby: secret
+#      auto: add
+#
+#  # define secrets
+#  secrets:
+#    conn_a:
+#      - '10.10.1.1 : PSK "v+NkxY9LLZvwj4qCC2o/gGrWDF2d21jL"'
+#
+#    conn_b:
+#      - 'alice@strongswan.org : EAP "x3.dEhgN"'
 
   tofs:
     # The files_switch key serves as a selector for alternative
